--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ packages = [{include = "neat-mario"}]
 python = "^3.10"
 neat-python = "^0.92"
 gymnasium = "^0.29.1"
+numpy = "^2.1.0"
+matplotlib = "^3.9.2"
+graphviz = "^0.20.3"
+pygame = "^2.6.0"
 
 
 [build-system]
